--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@fontsource/inter": "^5.2.8",
+    "@mui/joy": "^5.0.0-beta.52",
     "bootstrap": "^5.3.8",
     "oidc-client-ts": "^3.3.0",
     "react": "^19.1.1",
     "react-bootstrap": "^2.10.10",
-    "react-dom": "^19.1.1",
+    "react-dom": "^19.2.3",
     "react-oidc-context": "^3.3.0",
     "react-router-dom": "^7.8.2"
   },
