--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@fontsource/inter": "^5.2.8",
+    "@mui/icons-material": "^7.3.7",
     "@mui/joy": "^5.0.0-beta.52",
     "bootstrap": "^5.3.8",
     "oidc-client-ts": "^3.3.0",
