--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "globals": "^16.3.0",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.39.1",
+    "use-debounce": "^10.1.0",
     "vite": "^7.1.2"
   }
 }
