--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@fontsource/inter": "^5.2.8",
+    "@mui/icons-material": "^7.3.7",
     "@mui/joy": "^5.0.0-beta.52",
+    "@mui/material": "^7.3.7",
     "bootstrap": "^5.3.8",
     "oidc-client-ts": "^3.3.0",
     "react": "^19.1.1",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.2.3",
+    "react-icons": "^5.5.0",
     "react-oidc-context": "^3.3.0",
     "react-router-dom": "^7.8.2"
   },
