--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-dom": "^19.2.3",
     "react-icons": "^5.5.0",
     "react-oidc-context": "^3.3.0",
-    "react-router-dom": "^7.8.2"
+    "react-router-dom": "^7.8.2",
+    "use-debounce": "^10.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
